set(Novena_SRCS Novena.cpp)
qt4_automoc(${Novena_SRCS})
pkg_search_module(libnl REQUIRED libnl-3.0)
pkg_search_module(libnlgenl REQUIRED libnl-genl-3.0)
include_directories (${CMAKE_BINARY_DIR}/datasource/Novena ${libnl_INCLUDE_DIRS} ${libnlgenl_INCLUDE_DIRS})
link_directories (${libnl_LIBRARY_DIRS} ${libnlgenl_LIBRARY_DIRS})
add_library(Novena MODULE ${Novena_SRCS})
target_link_libraries(Novena ${libnl_LIBRARIES} ${libnlgenl_LIBRARIES})
install(TARGETS Novena DESTINATION share/osqoop/datasource)
